@@ -67,6 +67,8 @@ class Roda
 
           if roda_class.opts[:header_matcher_prefix]
             key = "HTTP_#{key}"
+          else
+            RodaPlugins.warn ":header matcher used without :header_matcher_prefix app option.  Currently this looks for the #{key} header, but in Roda 3 it will look for the HTTP_#{key} header.  You should set the :header_matcher_prefix app option and update your code if necessary to avoid this deprecation warning."
           end
 
           if v = @env[key]
